# PyKotMigra

./: .gitignore  README.md
.github/workflows/: examples.yml
catalog/: README.md  manifest.json
docs/architecture/: ADR-001-coverage-contract-gates.md
docs/plans/: 2026-05-14-faang-python-services-taxonomy-design.md  2026-05-14-faang-python-services-taxonomy.md
examples/ai-pipeline-python/: README.md
examples/ai-pipeline-python/kotlin/: build.gradle.kts  settings.gradle.kts
examples/ai-pipeline-python/kotlin/src/main/kotlin/dev/pykotmig/aipipeline/: Chain.kt
examples/ai-pipeline-python/kotlin/src/test/kotlin/dev/pykotmig/aipipeline/: ChainTest.kt
examples/ai-pipeline-python/python/: .coverage  README.md  pyproject.toml
examples/ai-pipeline-python/python/src/ai_pipeline_demo/: __init__.py  chain.py
examples/ai-pipeline-python/python/tests/: test_chain.py  test_chain_extended.py
examples/async-worker-python/: README.md
examples/async-worker-python/kotlin/: build.gradle.kts  settings.gradle.kts
examples/async-worker-python/kotlin/src/test/kotlin/dev/pykotmig/asyncworker/: PoolTest.kt  TemporalSmokeTest.kt
examples/async-worker-python/python/: .coverage  README.md  pyproject.toml
examples/async-worker-python/python/src/async_worker_demo/: __init__.py  pool.py
examples/async-worker-python/python/tests/: test_pool.py  test_pool_edges.py
examples/catalog-showcase/: README.md
examples/catalog-showcase/contracts/: openapi.json
examples/catalog-showcase/python/: .coverage  README.md  pyproject.toml
examples/catalog-showcase/python/src/catalog_showcase/: __init__.py  app.py  auth_stub.py  background_tasks.py  config.py  deps.py  health.py  logging_conf.py  middleware.py  models.py  outbound_client.py  routes.py  validation.py
examples/catalog-showcase/python/tests/: test_app.py  test_catalog_extended.py  test_openapi_contract.py
examples/cli-batch-python/: README.md
examples/cli-batch-python/kotlin/: build.gradle.kts  settings.gradle.kts
examples/cli-batch-python/kotlin/src/main/kotlin/dev/pykotmig/clibatch/: Batch.kt
examples/cli-batch-python/python/: .coverage  README.md  pyproject.toml
examples/cli-batch-python/python/src/cli_batch_demo/: __init__.py  batch.py  cli.py
examples/cli-batch-python/python/tests/: test_cli.py  test_cli_extended.py
examples/contracts/: README.md
examples/http-service-python/: README.md
examples/http-service-python/contracts/: openapi.json
examples/http-service-python/kotlin/: build.gradle.kts  settings.gradle.kts
examples/http-service-python/kotlin/src/main/kotlin/dev/pykotmig/httpservice/: Application.kt  Main.kt
examples/http-service-python/kotlin/src/test/kotlin/dev/pykotmig/httpservice/: ApplicationTest.kt
examples/http-service-python/python/: .coverage  README.md  pyproject.toml
examples/http-service-python/python/src/http_service_demo/: __init__.py  app.py
examples/http-service-python/python/tests/: test_app.py  test_greet.py  test_openapi_contract.py
examples/kafka-consumer-python/: README.md
examples/kafka-consumer-python/kotlin/: build.gradle.kts  settings.gradle.kts
examples/kafka-consumer-python/kotlin/src/main/kotlin/dev/pykotmig/kafkaconsumer/: KafkaAdapters.kt  Processor.kt
examples/kafka-consumer-python/python/: .coverage  README.md  pyproject.toml
examples/kafka-consumer-python/python/src/kafka_consumer_demo/: __init__.py  consumer_main.py  processor.py
examples/kafka-consumer-python/python/tests/: test_consumer_main.py  test_processor.py  test_processor_edges.py
examples/order-api/: README.md
examples/order-api/contracts/: openapi.json
examples/order-api/kotlin/: build.gradle.kts
examples/order-api/kotlin/src/main/kotlin/dev/pykotmig/orderapi/: Application.kt  Koin.kt  Main.kt  OrderStore.kt
examples/order-api/kotlin/src/test/kotlin/dev/pykotmig/orderapi/: ApplicationTest.kt
examples/order-api/python/: .coverage  README.md  pyproject.toml
examples/order-api/python/src/order_api/: __init__.py  app.py  config.py  deps.py  logging_conf.py  notify_client.py
examples/order-api/python/tests/: conftest.py  test_deps_shim.py  test_logging_conf.py  test_notify_client.py  test_openapi_contract.py  test_orders.py  test_orders_extra.py
examples/scripts/: export_openapi.py
examples/status-hub/: README.md
examples/status-hub/contracts/: openapi.json
examples/status-hub/kotlin/: build.gradle.kts  settings.gradle.kts
examples/status-hub/kotlin/src/main/kotlin/dev/pykotmig/statushub/: Application.kt
examples/status-hub/kotlin/src/test/kotlin/dev/pykotmig/statushub/: ApplicationTest.kt
examples/status-hub/python/: .coverage  README.md  pyproject.toml
examples/status-hub/python/src/status_hub/: __init__.py  app.py  background_tasks.py
examples/status-hub/python/tests/: test_health.py  test_http_edges.py  test_jobs_and_auth.py  test_openapi_contract.py
tool/: .coverage  README.md  pyproject.toml
tool/schemas/: analysis-v1.schema.json
tool/src/pykotmig/: __init__.py  __main__.py  analyze.py  cache.py  ir.py  openapi_load.py  scan.py  verify_loop.py
tool/src/pykotmig/cli/: main.py
tool/src/pykotmig/codegen/: __init__.py  emit.py  load.py  openapi_kotlin.py
tool/tests/: conftest.py  test_analyze_integration.py  test_cache.py  test_cache_extended.py  test_cli.py  test_cli_commands.py  test_codegen_load.py  test_main_entry.py  test_openapi_codegen_order_api.py  test_openapi_codegen_status_hub.py  test_openapi_kotlin_edges.py  test_openapi_load.py  test_openapi_models.py  test_openapi_routes.py  test_scan.py  test_verify_loop.py  test_verify_loop_integration.py
