[project]
name = "pykotmig"
version = "0.3.0"
description = "PyKotMig CLI — analyze FastAPI projects and generate Kotlin (Ktor) from analysis.json"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "libcst>=1.5.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "jsonschema>=4.0.0",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
pykotmig-cli = "pykotmig.cli.main:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pykotmig"]

[tool.pytest.ini_options]
testpaths = ["tests"]
