[project]
name = "ai-pipeline-demo"
version = "0.1.0"
description = "PyKotMig example: LangChain-core pipeline (LangChain4j map)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "mypy>=1.11.0", "ruff>=0.8.0", "pytest-cov>=5.0.0"]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_pipeline_demo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --cov=ai_pipeline_demo --cov-report=term-missing --cov-fail-under=95"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
explicit_package_bases = true
mypy_path = "src"
files = "src/ai_pipeline_demo"

[[tool.mypy.overrides]]
module = "langchain_core.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
