[project]
name = "async-worker-demo"
version = "0.1.0"
description = "PyKotMig example: asyncio job workers (Temporal/Celery mental model)"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "mypy>=1.11.0", "ruff>=0.8.0", "pytest-cov>=5.0.0"]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/async_worker_demo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers --cov=async_worker_demo --cov-report=term-missing --cov-fail-under=85"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
explicit_package_bases = true
mypy_path = "src"
files = "src/async_worker_demo"

[tool.ruff]
target-version = "py312"
line-length = 100
