[project]
name = "catalog-showcase"
version = "0.1.0"
description = "PyKotMig catalog — one Python module per documented component"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0", "respx>=0.21.0", "pytest-cov>=5.0.0"]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catalog_showcase"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --cov=catalog_showcase --cov-report=term-missing --cov-fail-under=96"
