[project]
name = "cli-batch-demo"
version = "0.1.0"
description = "PyKotMig example: argparse CLI + batch line processing (Clikt map)"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "mypy>=1.11.0", "ruff>=0.8.0", "pytest-cov>=5.0.0"]

[project.scripts]
cli-batch-demo = "cli_batch_demo.cli:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_batch_demo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --cov=cli_batch_demo --cov-report=term-missing --cov-fail-under=92"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
explicit_package_bases = true
mypy_path = "src"
files = "src/cli_batch_demo"

[tool.ruff]
target-version = "py312"
line-length = 100
