[project]
name = "http-service-demo"
version = "0.1.0"
description = "PyKotMig example: FastAPI HTTP service (Python → Ktor migration map)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0", "mypy>=1.11.0", "ruff>=0.8.0", "pytest-cov>=5.0.0"]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/http_service_demo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --cov=http_service_demo --cov-report=term-missing --cov-fail-under=85"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
mypy_path = "src"
files = "src/http_service_demo"

[tool.ruff]
target-version = "py312"
line-length = 100
