[project]
name = "order-api"
version = "0.1.0"
description = "PyKotMig Order API reference (FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "respx>=0.21.0", "pytest-cov>=5.0.0"]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/order_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --cov=order_api --cov-report=term-missing --cov-fail-under=85"
