[project]
name = "status-hub"
version = "0.1.0"
description = "PyKotMig Status Hub reference (FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.27.0", "pytest>=8.0.0", "pytest-cov>=5.0.0"]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/status_hub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --cov=status_hub --cov-report=term-missing --cov-fail-under=85"
